kubernetes/external-applications/pve1/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pve1
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve1.local.syspawn.com`)
      kind: Rule
      services:
        - name: pve1
          port: 8006
          scheme: https
  tls:
    secretName: local-syspawn-com-tls
